[tool.poetry]
name = "airflow-provider-rabbitmq"
version = "0.1.0"
description = "A RabbitMQ provider for Apache Airflow"
authors = ["Tes Engineering <engineering@tesglobal.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = "^2.2.0"
pika = "^1.2.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
bandit = "^1.7.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
