[tool.poetry]
name = "airflow-provider-rabbitmq"
version = "0.6.1"
description = "A RabbitMQ provider for Apache Airflow"
authors = ["Tes Engineering <engineering@tesglobal.com>"]
readme = "README.md"
packages = [
    { include = "rabbitmq_provider" },
]

[tool.poetry.plugins.apache_airflow_provider]
provider_info = "rabbitmq_provider.__init__:get_provider_info"

[tool.poetry.dependencies]
python = "^3.7"
apache-airflow = ">=1.10"
pika = "^1.2.0"
whippet = "^0.3.2"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
bandit = "^1.7.0"
flake8 = "^4.0.1"
isort = "^5.9.3"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
